--- a/11-OOP3-Interface/11-OOP3-Interface.csproj
+++ b/11-OOP3-Interface/11-OOP3-Interface.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
+    <RootNamespace>_11_OOP3_Interface</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
